# image-cropper

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/routes/: urls.py
backend/schema/: models.py
backend/services/: service.py
backend/utils/: helpers.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
